@startuml ActionCard
title ActionCard

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

enum ChanceType {
    GO_TO_NEAREST_STATION
    MOVE_BACK_3
    GO_TO_JAIL
}

enum CommunityType {
    BIRTHDAY
    DOCTOR_FEE
    CAMPAIGN_FEE
}

enum CardCategory {
    CHANCE
    COMMUNITY
    SKILL
}

abstract class ActionCard {
    --
    + {abstract} getCategory() : CardCategory
    + {abstract} clone() : Card*
}

class ChanceCard {
    - type : ChanceType
    --
    + getCardName() : string
    + getCategory() : CardCategory
    + getType() : ChanceType
    + clone() : Card*
}

class CommunityChestCard {
    - type : CommunityType
    --
    + getCardName() : string
    + getCategory() : CardCategory
    + getType() : ChanceType
    + clone() : Card*
}

ActionCard <|-- ChanceCard
ActionCard <|-- CommunityChestCard
ChanceCard ..> ChanceType : uses
CommunityChestCard ..> CommunityType : uses
ActionCard ..> CardCategory : uses

@enduml